# ml_28_Aug_2025

./: README.md  main.py  pyproject.toml  requirements.txt  test.ipynb  utils.py
01_Linear_Regression/: reg.ipynb
02_Manual_Preprocessing/: ohe.joblib  pre.ipynb  results.csv  scaler.joblib  weight_model.joblib
03 Automated Preprocessing/: pipeline.ipynb  pre.joblib  results.csv  weight_model.joblib
04 Feature Selection/: backward.ipynb  backward_model.joblib  backward_pre.joblib  backward_results.csv  backward_sel.joblib  forward.ipynb  forward_model.joblib  forward_results.csv  forward_sel.joblib
05 Regularization/: Reg.ipynb  results.csv
06 Logistic Regression/: iris_model.joblib  logistic.ipynb  pre.joblib  results.csv
07 Regression Project/: RegProject.ipynb  evaluation.csv  pre.joblib  results.csv  ridge_price_model.joblib  sel.joblib
08 Decision Tree Classification/: DTC.ipynb  iris_model.joblib  pre.joblib  results.csv
09 Decision Tree Regression/: DTR.ipynb  dtr_model.joblib  pre.joblib  results.csv
10 Ensemble Techniques/: ensemble.ipynb  pre.joblib  xgb_model.joblib  xgb_results.csv
11 SVM and KNN/: SVM_KNN.ipynb  pre.joblib  results.csv  svm_model.joblib
12 Algo Evaluation/: algo_eval.ipynb  best_model.joblib  results.csv
13 Usupervised Machine Learning/: Agglomerative.csv  agc_model.joblib  clustering.ipynb  kmeans.joblib  kmeans_res.csv  pre.joblib
